--- a/employee-service.properties
+++ b/employee-service.properties
@@ -4,4 +4,5 @@ spring.datasource.username=azureadmin
 spring.datasource.password=Shashank123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+#spring.cloud.config.enabled=false
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
