--- a/department-service.properties
+++ b/department-service.properties
@@ -4,5 +4,7 @@ spring.datasource.username=azureadmin
 spring.datasource.password=Shashank123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.boot.message=Hello Department service
 #spring.cloud.config.enabled=false
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
