--- a/employee-service.properties
+++ b/employee-service.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Shashank123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.boot.message=Hello Employee Service
+spring.boot.message=Hello Employee Service  Spring cloud Bus demo
 #spring.cloud.config.enabled=false
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
