--- a/department-service.properties
+++ b/department-service.properties
@@ -5,6 +5,6 @@ spring.datasource.password=Shashank123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.boot.message=Hello Department service spring cloud bus demo
+#spring.boot.message=Hello Department service spring cloud bus demo
 #spring.cloud.config.enabled=false
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
